Update supplier autocomplete and warehouse permissions